# zeiterfassung

./: .gitignore  .stylish-haskell.yaml  Main.hs  Zeiterfassung.hs  cabal.project  default.nix  flake.nix  shell.nix  unv-zeiterfassung.cabal  zeiterfassung.cabal  zeiterfassung.nix
exec/: tbd-time-tracking.hs
src/: Zeiterfassung.hs
src/Zeiterfassung/: CLI.hs  Config.hs  Data.hs  Parser.hs  Redmine.hs  Representation.hs  ToSpreadsheet.hs
tests/: Main.hs  ZeiterfassungSpec.hs
tests/Zeiterfassung/: DataSpec.hs  ParserSpec.hs  RedmineSpec.hs  RepresentationSpec.hs
