cabal-version:       2.4

name:                zeiterfassung
version:             0.1.0.0
license-file:        LICENSE
author:              Thomas Bach
maintainer:          info@thomasbach.dev

library
  exposed-modules:     Zeiterfassung
                     , Zeiterfassung.Data
                     , Zeiterfassung.Parser
  build-depends:     , base   >=4.12 && <4.14
                     , parsec >=3.1  && <3.2
                     , text   >=1.2  && <1.3
                     , time   >=1.8  && <1.10
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable zeiterfassung
  main-is:             Main.hs
  build-depends:       zeiterfassung
                     , base
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite zeiterfassung-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       zeiterfassung
                     , base
                     , parsec
                     , text
                     , time
                     , hspec >= 2.7 && <2.8
  ghc-options:         -Wall -Wno-missing-home-modules
  default-language:    Haskell2010
