cabal-version:       3.0

name:                zeiterfassung
version:             0.1.0.0
author:              Thomas Bach
maintainer:          info@thomasbach.dev

common common-options
  build-depends:     , base
                     , parsec
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:  FlexibleInstances
                     , OverloadedStrings
                     , RecordWildCards
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

library
  import:              common-options
  exposed-modules:     Zeiterfassung
                     , Zeiterfassung.Parser
                     , Zeiterfassung.Representation
  hs-source-dirs:      src

executable zeiterfassung
  import:              common-options
  main-is:             Main.hs
  build-depends:       zeiterfassung

test-suite zeiterfassung-tests
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       zeiterfassung
                     , hspec
  ghc-options:         -Wno-missing-home-modules
