cabal-version: 3.0
name:          zeiterfassung
version:       0.1.0.0
author:        Thomas Bach
maintainer:    info@thomasbach.dev

common common-options
  build-depends:      base
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleInstances
    InstanceSigs
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections

  ghc-options:
    -Wall -Wcompat -Wcpp-undef -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

library
  import:          common-options
  exposed-modules:
    Zeiterfassung
    Zeiterfassung.CLI
    Zeiterfassung.Config
    Zeiterfassung.Parser
    Zeiterfassung.Redmine
    Zeiterfassung.Representation
    Zeiterfassung.ToSpreadsheet

  build-depends:
    , aeson
    , bytestring
    , containers
    , exceptions
    , hslogger
    , http-conduit
    , optparse-applicative
    , parsec
    , text
    , time
    , unordered-containers

  hs-source-dirs:  src

executable unv-zeiterfassung
  import:        common-options
  main-is:       exec/unv-zeiterfassung.hs
  build-depends: zeiterfassung

executable tbd-time-tracking
  import:        common-options
  main-is:       exec/tbd-time-tracking.hs
  build-depends: zeiterfassung
  

test-suite zeiterfassung-tests
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  build-depends:
    , exceptions
    , hspec
    , parsec
    , QuickCheck
    , quickcheck-instances
    , text
    , time
    , zeiterfassung

  ghc-options:    -Wno-missing-home-modules
